# llm-provider

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
docs/: agent_loop_comparison.md  ironclaw_agent_loop.md  openfang_agent_loop.md  zeroclaw_agent_loop.md
examples/: extractor.rs  simple_prompt.rs  tool_use.rs
src/: extractor.rs  lib.rs  prelude.rs  streaming.rs
src/agent/: builder.rs  completion.rs  mod.rs
src/agent/prompt_request/: mod.rs  streaming.rs
src/client/: completion.rs  mod.rs  model_listing.rs
src/completion/: message.rs  request.rs
src/model/: listing.rs
src/providers/: azure.rs  deepseek.rs  galadriel.rs  groq.rs  hyperbolic.rs  llamafile.rs  mira.rs  mod.rs  moonshot.rs  ollama.rs  perplexity.rs
src/providers/anthropic/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/cohere/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/gemini/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/gemini/interactions_api/: mod.rs  streaming.rs
src/providers/huggingface/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/mistral/: client.rs  completion.rs  mod.rs
src/providers/openai/: client.rs  mod.rs
src/providers/openai/completion/: mod.rs  streaming.rs
src/providers/openai/responses_api/: mod.rs  streaming.rs  websocket.rs
src/providers/openrouter/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/together/: client.rs  completion.rs  mod.rs  streaming.rs
src/providers/xai/: client.rs  completion.rs  mod.rs  streaming.rs
src/tool/: mod.rs  rmcp.rs  server.rs
